@@ -39,12 +39,13 @@ GimpHelpDomain * gimp_help_domain_new           (const gchar     *domain_name,
                                                  const gchar     *domain_root);
 void             gimp_help_domain_free          (GimpHelpDomain  *domain);
 
-GimpHelpLocale * gimp_help_domain_lookup_locale (GimpHelpDomain *domain,
-                                                 const gchar    *locale_id);
-gchar          * gimp_help_domain_map           (GimpHelpDomain *domain,
-                                                 GList          *help_locales,
-                                                 const gchar    *help_id,
-                                                 gboolean       *fatal_error);
+GimpHelpLocale * gimp_help_domain_lookup_locale (GimpHelpDomain  *domain,
+                                                 const gchar     *locale_id);
+gchar          * gimp_help_domain_map           (GimpHelpDomain  *domain,
+                                                 GList           *help_locales,
+                                                 const gchar     *help_id,
+                                                 GimpHelpLocale **locale,
+                                                 gboolean        *fatal_error);
 void             gimp_help_domain_exit          (void);
 
 
